# my_works

./: .gitignore
1_lab/15puzzle/: CMakeLists.txt  Doxyfile
1_lab/15puzzle/app/: fifteen_main.cpp
1_lab/15puzzle/include/fifteen/: fifteenpuzzle.h
1_lab/15puzzle/src/fifteen/: fifteen.cpp
1_lab/15puzzle/tests/: tests.cpp
1_lab/Makrov/: CMakeLists.txt  Doxyfile  result.txt
1_lab/Makrov/app/: Markov_main.cpp
1_lab/Makrov/include/: MarkovMachine.h  MarkovProgram.h  MarkovRule.h
1_lab/Makrov/src/: MarkovMachine.cpp  MarkovProgram.cpp  MarkovRule.cpp
1_lab/Makrov/tests/: tests_markov.cpp
PP/: Otcet.md  for_me.md  repo.path
PP/interface/sc-web/: data.db  package-lock.json  secret.txt
PP/kb.bin/: string_offsets_link_hashes.scdb  strings10.scdb  strings12.scdb  strings4.scdb  strings5.scdb  strings6.scdb  strings8.scdb  term_string_offsets.scdb
PP/knowledge-base/examples/subject_domain_of_blockchain/entities/: bitcoin.scs  example_blocks.scs
PP/knowledge-base/examples/subject_domain_of_blockchain/programs/: program_for_searching.scs  test_program_for_searching_pow_blocks.scs
PP/knowledge-base/examples/subject_domain_of_blockchain/templates/: template_for_searching_receivers_in_blockchain.scs
PP/knowledge-base/subject_domain_of_network_resilience/actions/: action_analyze_network_resilience.scs
PP/knowledge-base/subject_domain_of_network_resilience/concepts/classes/: concept_router.scs
PP/knowledge-base/subject_domain_of_network_resilience/instances/: corporate_network_topology.scs
PP/knowledge-base/subject_domain_of_project/: subject_domain_of_project_scheduling.scs
PP/knowledge-base/subject_domain_of_project/actions/: action_construcct_project_dag_from_csv.scs  action_project_dag_ready.scs
PP/problem-solver/: CMakeLists.txt
PP/problem-solver/company_module/: scheduling_module.cpp  scheduling_module.hpp
PP/problem-solver/network_resilience_module/: network_resilience_module.cpp
PP/problem-solver/network_resilience_module/agent/: AnalyzeNetworkResilienceAgent.hpp
PP/problem-solver/network_resilience_module/test/: test_network_resilience.cpp
PP/repo/: strings1.scdb
PPOIS/PpoisNetworkResilience/: PP.md  QUICKSTART.md  README_EXPLAIN.md  README_SIMPLE_EXPLANATION.md  README_VARIANT_6.md  docker-compose.yml
PPOIS/PpoisNetworkResilience/knowledge-base/network-domain/: network_domain.scs  test_network.scs
PP_final/: 1.txt  conanfile.py
PP_final/kb.bin/: strings1.scdb  strings11.scdb  strings2.scdb  strings3.scdb  strings7.scdb  strings9.scdb
PP_final/knowledge-base/subject_domain_of_network_resilience/: subject_domain_of_network_resilience.scs
PP_final/knowledge-base/subject_domain_of_project/actions/: action_analyze_schedule.scs  action_find_critical.scs
PP_final/knowledge-base/ui_menu/: ui_main_menu.scs  ui_menu_network_resilience.scs
PP_final/problem-solver/company_module/agent/: construct_project_dag_agent.cpp  construct_project_dag_agent.hpp
PP_final/problem-solver/company_module/keynodes/: scheduling_keynodes.hpp
PP_final/problem-solver/company_module/test/: test_correct_plan.cpp
PP_final/problem-solver/network_resilience_module/: CMakeLists.txt
PP_final/problem-solver/network_resilience_module/agent/: AnalyzeNetworkResilienceAgent.cpp
PP_final/problem-solver/network_resilience_module/keynodes/: network_resilience_keynodes.hpp
lab_2_sc/: CMakeLists.txt  README.md  start.sh  start_all.bat  start_all2.bat
lab_2_sc/cli/: main.cpp
lab_2_sc/cli/menu/: ConsoleMenu.cpp  ConsoleMenu.hpp
lab_2_sc/include/sn/: sn.hpp
lab_2_sc/include/sn/config/: Constants.hpp
lab_2_sc/include/sn/domain/entities/: Credentials.hpp  Profile.hpp  Session.hpp  User.hpp
lab_2_sc/include/sn/domain/entities/friends/: FriendRequest.hpp
lab_2_sc/include/sn/domain/entities/messages/: Message.hpp
lab_2_sc/include/sn/domain/entities/posts/: Post.hpp
lab_2_sc/include/sn/domain/exceptions/: Exceptions.hpp  SocialNetworkException.hpp
lab_2_sc/include/sn/domain/value_objects/: Email.hpp  Phone.hpp
lab_2_sc/include/sn/services/: AuthService.hpp  FeedService.hpp  FriendService.hpp  MessageService.hpp  PostService.hpp
lab_2_sc/include/sn/services/security/: IPasswordHasher.hpp  SimplePasswordHasher.hpp
lab_2_sc/include/sn/storage/memory/: InMemoryFriendRepository.hpp  InMemoryMessageRepository.hpp  InMemoryPostRepository.hpp  InMemoryUserRepository.hpp
lab_2_sc/include/sn/storage/repositories/: IFriendRepository.hpp  IMessageRepository.hpp  IPostRepository.hpp  IUserRepository.hpp
lab_2_sc/include/sn/util/: Clock.hpp  IdGenerator.hpp
lab_2_sc/src/: sn.cpp
lab_2_sc/src/domain/entities/: Credentials.cpp  Profile.cpp  Session.cpp  User.cpp
lab_2_sc/src/domain/entities/friends/: FriendRequest.cpp
lab_2_sc/src/domain/entities/messages/: Message.cpp
lab_2_sc/src/domain/entities/posts/: Post.cpp
lab_2_sc/src/domain/value_objects/: Email.cpp  Phone.cpp
lab_2_sc/src/services/: AuthService.cpp  FeedService.cpp  FriendService.cpp  MessageService.cpp  PostService.cpp
lab_2_sc/src/services/security/: SimplePasswordHasher.cpp
lab_2_sc/src/storage/memory/: InMemoryFriendRepository.cpp  InMemoryMessageRepository.cpp  InMemoryPostRepository.cpp  InMemoryUserRepository.cpp
lab_2_sc/src/util/: Clock.cpp  IdGenerator.cpp
lab_2_sc/tests/: CMakeLists.txt  minitest.hpp  test_entities.cpp  test_exceptions.cpp  test_feed.cpp  test_friends.cpp  test_main.cpp  test_messages.cpp  test_posts.cpp  test_services.cpp  test_smoke.cpp  test_storage.cpp  test_util.cpp  test_value_objects.cpp
(+60 files in other folders)
